# rrm

./: Cargo.toml  README.md  justfile
.github/actions/build-bin/: action.yml  build.bash  build.ps1
.github/actions/setup-env/: setup-env.bash  setup-env.ps1
.github/actions/setup-just/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-uutils/: action.yml  install.bash
.github/workflows/: release.yaml
src/: main.rs
