[package]
name = "rrm"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
normalize-path = "0.2.1"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
